[package]
name = "filecoin-proofs"
description = "The Filecoin specific aspects of storage-proofs, including a C based FFI, to generate and verify proofs."
version = "6.0.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "laser <l@s3r.com>", "porcuquine <porcuquine@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs = { version = "^6.0.0", path = "../storage-proofs", default-features = false, features = ["tree_c-serial-tree_r_last"] }
filecoin-hashers = { version = "1.0.0", path = "../filecoin-hashers", default-features = false, features = ["poseidon", "sha256"] }
bitvec = "0.17"
rand = "0.7"
lazy_static = "1.2"
memmap = "0.7"
byteorder = "1"
itertools = "0.9"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
regex = "1.3.7"
bellperson = { package = "bellperson", path = "../../fil-zk", default-features = false }
ff = { version = "0.2.3", package = "fff" }
blake2b_simd = "0.5"
log = "0.4.7"
fil_logger = "0.1"
env_proxy = "0.4"
flate2 = { version = "1.0.9", features = ["rust_backend"] }
tar = "0.4.26"
rayon = "1.2.1"
rayon-core = "1.6.1"
rayon-futures = "0.1.1"
blake2s_simd = "0.5.8"
hex = "0.4.0"
merkletree = "0.21.0"
bincode = "1.1.2"
anyhow = "1.0.23"
rand_xorshift = "0.2.0"
sha2 = "0.9.1"
typenum = "1.11.2"
gperftools = { version = "0.2", optional = true }
generic-array = "0.14.4"
groupy = "0.3.0"
byte-slice-cast = "1.0.0"
fr32 = { path = "../fr32", default-features = false }
thiserror = "1.0.6"

[dev-dependencies]
criterion = "0.3"
rexpect = "0.4.0"
pretty_assertions = "0.6.1"
failure = "0.1.7"
tempfile = "3"

[features]
default = ["gpu", "blst"]
cpu-profile = ["gperftools"]
heap-profile = ["gperftools/heap"]
simd = ["storage-proofs/simd"]
asm = ["storage-proofs/asm"]
gpu = ["storage-proofs/gpu", "bellperson/gpu", "filecoin-hashers/gpu", "fr32/gpu"]
pairing = ["storage-proofs/pairing", "bellperson/pairing", "filecoin-hashers/pairing", "fr32/pairing"]
blst = ["storage-proofs/blst", "bellperson/blst", "filecoin-hashers/blst", "fr32/blst"]

[[bench]]
name = "preprocessing"
harness = false
