[package]
name = "storage-proofs-porep"
version = "8.0.2"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Proofs of replication"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
crossbeam = "0.8"
digest = "0.9"
storage-proofs-core = { path = "../storage-proofs-core", version = "^8.0.0", default-features = false}
sha2raw = { path = "../sha2raw", version = "^3.0.0"}
filecoin-hashers = { path = "../filecoin-hashers", version = "^3.0.0", default-features = false, features = ["poseidon", "sha256"]}
rand = "0.7"
merkletree = { git = "ssh://git@github.com/nilfoundation/eliovp-merkletree.git", branch = "master" }
mapr = "0.8.0"
num-bigint = "0.2"
num-traits = "0.2"
sha2 = { version = "0.9.1", features = ["compress"] }
rayon = "1.2.1"
rayon-core = "1.6.1"
rayon-futures = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
bellperson = { git = "ssh://git@github.com/nilfoundation/eliovp-fil-zk.git", branch = "master", default-features = false }
serde_json = "1.0"
ff = { version = "0.3.1", package = "fff" }
log = "0.4.7"
pretty_assertions = "0.6.1"
generic-array = "0.14.4"
anyhow = "1.0.23"
neptune = { git = "ssh://git@github.com/nilfoundation/eliovp-neptune.git", branch = "master", default-features = false, features = ["opencl"] }
num_cpus = "1.10.1"
hex = "0.4.2"
bincode = "1.1.2"
byteorder = "1.3.4"
lazy_static = "1.2"
byte-slice-cast = "1.0.0"
hwloc2 = { git = "ssh://git@github.com/NilFoundation/hwloc2-rs" }
libc = "0.2"
fdlimit = "0.2.0"
rust-gpu-tools = { version = "0.3.0" }
fr32 = { path = "../fr32", default-features = false }
thread_binder = {git = "ssh://git@github.com/NilFoundation/thread_binder", branch = "master"}
enum_derive = "0.1.7"
custom_derive = "0.1.7"

[target."cfg(target_arch = \"aarch64\")".dependencies]
sha2 = { version = "0.9.3", features = ["compress", "asm"] }
[target."cfg(not(target_arch = \"aarch64\"))".dependencies]
sha2 = { version = "0.9.3", features = ["compress"] }

[dev-dependencies]
tempfile = "3"
rand_xorshift = "0.2.0"
criterion = "0.3.0"
glob = "0.3.0"
pretty_env_logger = "0.4.0"
filecoin-hashers = { path = "../filecoin-hashers", version = "^3.0.0", default-features = false, features = ["poseidon", "sha256", "blake2s"]}

[features]
default = ["blst", "gpu"]
gpu = ["storage-proofs-core/gpu", "filecoin-hashers/gpu", "neptune/opencl", "bellperson/gpu", "fr32/gpu"]
pairing = ["storage-proofs-core/pairing", "bellperson/pairing", "neptune/pairing", "filecoin-hashers/pairing", "fr32/pairing"]
blst = ["storage-proofs-core/blst", "bellperson/blst", "neptune/blst", "filecoin-hashers/blst", "fr32/blst"]
single-threaded = []

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "parents"
harness = false
