[package]
name = "storage-proofs-post"
version = "6.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "Proofs of Space Time"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../storage-proofs-core", version = "^6.0.0", default-features = false}
filecoin-hashers = { path = "../filecoin-hashers", version = "1.0.0", default-features = false, features = ["poseidon", "sha256"]}
rand = "0.7"
merkletree = "0.21.0"
byteorder = "1"
crossbeam = "0.8"
sha2 = "0.9.1"
rayon = "1.2.1"
rayon-core = "1.6.1"
rayon-futures = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
blake2b_simd = "0.5"
blake2s_simd = "0.5"
bellperson = { git = "ssh://git@github.com/nilfoundation/eliovp-fil-zk.git", branch = "develop", default-features = false }
ff = { version = "0.2.3", package = "fff" }
log = "0.4.7"
hex = "0.4.0"
generic-array = "0.14.4"
anyhow = "1.0.23"
neptune = { git = "ssh://git@github.com/nilfoundation/eliovp-neptune.git", branch = "develop", default-features = false, features = ["opencl"] }
num_cpus = "1.10.1"
fr32 = { path = "../fr32", default-features = false }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "0.6.1"
rand_xorshift = "0.2.0"
filecoin-hashers = { path = "../filecoin-hashers", version = "1.0.0", default-features = false, features = ["poseidon", "sha256", "blake2s"]}

[features]
default = ["blst", "gpu"]
gpu = ["storage-proofs-core/gpu", "filecoin-hashers/gpu", "neptune/opencl", "fr32/gpu"]
pairing = ["storage-proofs-core/pairing", "bellperson/pairing", "neptune/pairing", "filecoin-hashers/pairing", "fr32/pairing"]
blst = ["storage-proofs-core/blst", "bellperson/blst", "neptune/blst", "filecoin-hashers/blst", "fr32/blst"]

