[package]
name = "storage-proofs-porep"
version = "5.2.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Proofs of replication"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
crossbeam = "0.7.3"
digest = "0.9"
storage-proofs-core = { path = "../core", version = "^5.0.0"}
sha2raw = { path = "../../sha2raw", version = "^2.0.0"}
rand = "0.7"
merkletree = "0.21.0"
mapr = "0.8.0"
num-bigint = "0.2"
num-traits = "0.2"
sha2 = { version = "0.9.1", features = ["compress"] }
rayon = "1.2.1"
rayon-core = "1.6.1"
rayon-futures = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
ff = { git = "https://github.com/nilfoundation/crusty3-ff", rev = "6c3e204", package = "fff", features = ["derive"] }
bellperson = { git = "ssh://git@github.com/nilfoundation/crusty3-zk.git", branch = "master", features = ["gpu", "multicore"] }
paired = { git = "https://github.com/nilfoundation/crusty3-pairing", version = "0.20.0", features = ["serde"] }
fil-sapling-crypto = { git = "https://github.com/nilfoundation/crusty3-sapling", branch = "master" }
log = "0.4.7"
pretty_assertions = "0.6.1"
generic-array = "0.13.2"
anyhow = "1.0.23"
neptune = { git = "https://github.com/nilfoundation/crusty3-neptune", branch = "master", features = ["gpu"] }
num_cpus = "1.10.1"
hex = "0.4.2"
bincode = "1.1.2"
byteorder = "1.3.4"
lazy_static = "1.2"
byte-slice-cast = "0.3.5"
serde_json = "1.0.57"

[dev-dependencies]
tempfile = "3"
rand_xorshift = "0.2.0"
criterion = "0.3.0"
glob = "0.3.0"
pretty_env_logger = "0.4.0"

[features]
default = ["tree_c-serial-tree_r_last"]
derive = ["ff/fff_derive"]
gpu = ["neptune/gpu"]

tree_c-serial-tree_r_last = []
tree_c-parallel-tree_r_last = []

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "parents"
harness = false
