[package]
name = "storage-proofs-post"
version = "5.2.3"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
license = "MIT OR Apache-2.0"
description = "Proofs of Space Time"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../core", version = "^5.0.0" }
rand = "0.7"
merkletree = "0.21.0"
byteorder = "1"
crossbeam = "0.7.3"
sha2 = "0.9.1"
rayon = "1.2.1"
rayon-core = "1.6.1"
rayon-futures = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
blake2b_simd = "0.5"
blake2s_simd = "0.5"
ff = { git = "https://github.com/nilfoundation/crusty3-ff", rev = "6c3e204", package = "fff", features = ["derive"] }
bellperson = { git = "ssh://git@github.com/nilfoundation/crusty3-zk.git", branch = "master", features = ["gpu", "multicore"] }
paired = { git = "https://github.com/nilfoundation/crusty3-pairing", version = "0.20.0", features = ["serde"] }
fil-sapling-crypto = { git = "https://github.com/nilfoundation/crusty3-sapling", branch = "master" }
log = "0.4.7"
hex = "0.4.0"
generic-array = "0.13.2"
anyhow = "1.0.23"
neptune = { git = "https://github.com/nilfoundation/crusty3-neptune", branch = "v1.1.2-branch", features = ["gpu"] }
num_cpus = "1.10.1"

[features]
derive = ["ff/fff_derive"]
gpu = ["neptune/gpu"]

[dev-dependencies]
tempfile = "3"
pretty_assertions = "0.6.1"
rand_xorshift = "0.2.0"
